[package]
name = "nesmur"
edition = "2021"
version = "2.0.0-dev.2"
authors = ["PitchBlackNights <pitchblacknights@proton.me>"]
repository = "https://github.com/pitchblacknights/nesmur"
license = "MIT"
publish = false

[dependencies]
nes = { path = "./nes" }
env_logger = "0.11.8"
log = "0.4.28"
colored = "3.0.0"
chrono = "0.4.42"
clap = { version = "4.5.48", features = ["cargo"] }
crossbeam = "0.8.4"
imgui = "0.12.0"
imgui-winit-support = "0.13.0"
imgui-glow-renderer = "0.13.0"
raw-window-handle = "0.6.2"
glow = "0.16.0"
glutin = "0.32.3"
glutin-winit = "0.5.0"
winit = "0.30.12"
image = "0.25.8"

[patch.crates-io]
imgui-glow-renderer = { path = "./patches/imgui-glow-renderer" }

[build-dependencies]
vergen-git2 = { version = "9.1.0", features = ["build", "cargo", "rustc", "si", "emit_and_set"]}

[workspace]
members = ["nes", "xtask"]

[lints.clippy]
uninlined-format-args = "allow"
new-without-default = "allow"
