[package]
name = "nes"
edition = "2024"
version = "2.0.0-dev.1"
authors = ["PitchBlackNights <pitchblacknights@proton.me>"]
repository = "https://github.com/PitchBlackNights/nesmur/tree/main/nes"
license = "MIT"
publish = false

[dependencies]
log = "0.4.28"
bitflags = "2.9.4"

[dev-dependencies]
md5 = "0.8.0"

[lints.clippy]
uninlined-format-args = "allow"
new-without-default = "allow"
